--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "core-js": "*"
   },
   "devDependencies": {
-    "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^1.x.x",
-    "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
-    "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
+    "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
     "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis",
-    "typescript": "^3.3.3333"    
-}
+    "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation",
+    "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager",
+    "typescript": "^3.3.3333"
+  }
 }
