--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dependency/nodejsLiveReload",
   "version": "1.0.0",
-  "main": "./source/entrypoint/api/transpilation.entrypoint.js",
+  "main": "./entrypoint/programmaticAPI",
   "scripts": {},
   "dependencies": {
     "browser-sync": "*",
@@ -10,8 +10,8 @@
   },
   "devDependencies": {
     "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
-    "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis",
-    "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation",
+    "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
+    "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
     "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager",
     "typescript": "^3.3.3333"
   }
